[tool.poetry]
name = "dramatiq-subqueues"
version = "0.1.0"
description = "Desiging Subqueues for Dramatiq"
authors = ["Ryan Hiebert <ryan@ryanhiebert.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = "^19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
